fix: improvements to MapleIR ssa optimisation