@@ -39,12 +39,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += [
-            '--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
-            '--add-exports', 'java.base/jdk.internal.util=ALL-UNNAMED'
-    ]
-}
 
 jar {
     into('resources') {
@@ -68,8 +62,6 @@ processTestResources {
 test {
     useJUnitPlatform()
 }
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
 configurations {
     downgrade
